# jupyterhub-oauthenticator-authz-helpers

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: canvas.rst  conf.py  index.rst  mastodon.rst
src/jupyterhub_oauthenticator_authz_helpers/: __about__.py  canvas.py  mastodon.py  utils.py
tests/: conftest.py  test_canvas.py  test_mastodon.py
tests/responses/canvas/: get_courses.json  get_self_groups.json
tests/responses/mastodon/: get_relationships.json
